<resources>
    <string name="app_name">My Collection</string>
    <string name="title_home">Início</string>
    <string name="title_collections">Coleções</string>
    <string name="title_profile">Perfil</string>
    <string name="home_welcome_title">Bem-vindo de volta!</string>
    <string name="home_subtitle">Gerencie suas coleções de livros, filmes e jogos</string>
    <string name="login_email_placeholder">E-mail</string>
    <string name="login_password_placeholder">Senha</string>
    <string name="login_button_text">Entrar</string>
    <string name="login_subtitle_text">Gerenciamento de Coleções\nPessoais</string>
    <string name="books">Livros</string>
    <string name="movies">Filmes</string>
    <string name="games">Jogos</string>
    <string name="search">Pesquisar</string>
    <string name="profile">Perfil</string>
    <string name="all">Todos</string>
    <string name="category_book">Livro</string>
    <string name="category_movie">Filme</string>
    <string name="category_game">Jogo</string>
    <string name="category_album">Álbum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_create_collection">Adicionar Item</string>
    <string name="label_image_text">Imagem</string>
    <string name="image_picker_call_to_action">Toque para adicionar uma imagem</string>
    <string name="image_picker_auxiliar_text">ou insira uma URL abaixo</string>
    <string name="label_image_url">URL da Imagem (opcional)</string>
    <string name="placeholder_image_url">https://exemplo.com/imagem.jpeg</string>
    <string name="label_title">Título *</string>
    <string name="placeholder_title">Digite o título do item</string>
    <string name="label_category">Categoria *</string>
    <string name="placeholder_category">Selecione uma categoria</string>
    <string name="label_author">Autor</string>
    <string name="placeholder_author">Nome do criador</string>
    <string name="label_description">Descrição</string>
    <string name="placeholder_description">Adicione uma descrição, suas impressões ou comentários sobre o item...</string>
    <string name="label_rating">Avaliação</string>
    <string name="placeholder_rating">Toque nas estrelas para avaliar</string>
    <string name="add_item_btn_text">Adicionar à Coleção</string>
    <string name="home_empty_state_title">Nenhum item encontrado</string>
    <string name="home_empty_state_description">Adicione seu primeiro item para começar</string>
    <string name="home_empty_state_btn">Cadastrar novo</string>
    <string name="empty_image_description_text">Imagem de uma caixa representando a ausência de itens na coleção</string>
</resources>