<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="?attr/colorSurface"
        android:paddingVertical="24dp">

        <TextView
            android:id="@+id/text_home_welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="?attr/colorTextPrimary"
            android:text="@string/home_welcome_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_home_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/home_subtitle"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_home_welcome_title"
            android:textColor="?attr/colorTextSecondary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:id="@+id/categories_counter_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/header_view">

        <com.diogo.mycollection.core.components.CardCategoryCounter
            android:id="@+id/counter_books"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            app:icon="@drawable/ic_book_solid_full"
            app:labelText="@string/books" />

        <com.diogo.mycollection.core.components.CardCategoryCounter
            android:id="@+id/counter_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            app:icon="@drawable/ic_film_solid_full"
            app:labelText="@string/movies" />

        <com.diogo.mycollection.core.components.CardCategoryCounter
            android:id="@+id/counter_games"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="8dp"
            app:icon="@drawable/ic_gamepad_solid_full"
            app:labelText="@string/games" />
    </LinearLayout>

    <com.diogo.mycollection.core.components.CategoryTabsView
        android:id="@+id/viewCategoryTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/categories_counter_view_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emptyStateContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="24dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/viewCategoryTabs"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/emptyImage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/empty_image_description_text"
            android:src="@drawable/ic_box_open_solid_full"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/emptyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_empty_state_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/colorTextPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/emptyImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/emptySubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_empty_state_description"
            android:textSize="16sp"
            android:textColor="?attr/colorTextSecondary"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/emptyTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/emptyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_empty_state_btn"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/emptySubtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCollections"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/viewCategoryTabs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        tools:listitem="@layout/item_collection_home"
        tools:itemCount="4"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newItemFabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:tint="@color/white"
        android:src="@drawable/plus_solid_full"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
